fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -24,5 +24,6 @@ main {
 img {
     border-radius: 50%;
     width: 100%;
+    margin: 1em 0 0 0;
 
 }
